--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,27 @@
 @tailwindcss base;
 @tailwindcss components;
 @tailwind utilities;
+
+@layer utilities {
+    .showPopUp{
+    height: 6.3rem;
+    width: 9rem;
+    position: absolute;
+    right: 25px;
+    top:5rem;
+    margin-top: -1.3rem;
+    border-radius: 10px;
+    border: none;
+    background-color: #dfbf9f;
+    color: white;
+    font-size: 1.1rem;
+    font-weight: 600;
+    cursor: pointer;
+    }
+    .shadowIO{
+        box-shadow:
+       inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(255,255,255),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+    }
+}
