--- a/src/styles.css
+++ b/src/styles.css
@@ -24,4 +24,21 @@
              0 0  0 2px rgb(255,255,255),
              0.3em 0.3em 1em rgba(0,0,0,0.3);
     }
+    .slide-down{
+        animation: myAnimation 2s linear ; 
+        animation-fill-mode: forwards;
+    }
+    @keyframes myAnimation {
+        0% {
+          opacity: 0;
+          transform: translateY(-50%);
+        }
+        50% {
+          opacity: 0.5;
+          transform: translateY(0%);
+        }
+        100% {
+          opacity: 1;
+        }
+      }
 }
